# lore

./: .gitignore  CLAUDE.md  README.md  config.toml  pyproject.toml
docs/: prd-v3.md
src/lore/: app.py  cli.py  config.py  lore.tcss
src/lore/agent/: diff.py  planner.py  tools.py
src/lore/context/: builder.py  retriever.py
src/lore/ingestion/: chunker.py  embedder.py
src/lore/storage/: chroma.py  db.py
src/lore/widgets/: dashboard.py  docs_viewer.py
